<resources>
    <string name="app_name">VeloCity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_speed">SpeedActivity</string>
    <string name="title_activity_position">PositionActivity</string>
    <string name="title_activity_pulse">PulseActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="position">Position</string>
    <string name="speed">Speed</string>
    <string name="pulse">Pulse</string>
    <string name="zero">0</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="title_activity_maps">Map</string>
</resources>
